--- a/vignettes/data_integration.Rmd
+++ b/vignettes/data_integration.Rmd
@@ -1,7 +1,9 @@
 ---
 title: "Getting started with data integration"
-output: html_document
-date: "2023-11-14"
+output: rmarkdown::html_vignette
+vignette: >
+  %\VignetteEngine{knitr::knitr}
+  %\VignetteIndexEntry{Getting started with data integration}
 ---
 
 ```{r setup, include=FALSE}
